# Originator

./: .dockerignore  .gitignore  Dockerfile  README.md  SUBMISSION.md  pyproject.toml
agent/: entrypoint.sh  main.py
agent/harness/claude-bu/: browser.py  loop.py  main.py
app/: README.md  dev.sh  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.mts
app/backend/: main.ts
app/backend/api/: _emitter.ts  _models.ts  _os.ts  index.ts
app/frontend/: App.tsx  client.browser.ts  client.ts  index.html  main.tsx  orpc.tsx  styles.css
app/scripts/: openapi-generate.ts
calibration/: claude-sonnet-4-5.yaml  claude-sonnet-4-6.yaml  cli.py
curriculum/: __init__.py  sdk.py  seed_generator.py
curriculum/tasks/align-the-row/: generator.py  grader.py  task.yaml
curriculum/tasks/align-the-row/.execs/claude-sonnet-4-6/20260613T215357Z/: grade.json  output.json  prompt.txt  transcript.html  transcript.json
curriculum/tasks/align-the-row/.execs/claude-sonnet-4-6/20260613T215517Z/: output.json  transcript.html  transcript.json
curriculum/tasks/arrange-the-venn/: generator.py  grader.py  task.yaml
curriculum/tasks/match-the-style/: generator.py  grader.py  task.yaml
curriculum/tasks/set-the-clock/: generator.py  grader.py  task.yaml
curriculum/tasks/yellow-circle-in-blue-box/: generator.py  grader.py  seed.json  task.yaml
docs/: a-primer-on-rlvr.md
tests/: test_transcript_screenshots.py
tests/task/: test_graders.py
tests/task/screenshot-hello-joe/: generator.py  grader.py  seed.json  task.yaml
(+93 files in other folders)
