[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "excalidraw-debug"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "pyyaml",
    "anthropic>=0.40.0",
    "playwright>=1.40.0",
]

[project.scripts]
calibration = "calibration.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["calibration"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
